# django-quickstart

./: .env.example  .flake8  .gitignore  .pyre_configuration  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-quality.yml
cloudbuild/: deploy_run.yaml
docker/: Dockerfile.run
docs/: development.md
scripts/: celery-entrypoint.sh  drop_db.sh  manage.sh
src/core/: asgi.py  celery.py  mixins.py  settings.py  urls.py  wsgi.py
src/iam/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
src/iam/management/commands/: createsu.py
src/iam/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
src/notification/: services.py  tasks.py
src/notification/templates/emails/: activation_email.html  reset_password_email.html
